--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,46 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
+# Build output
+.next/
+out/
 
-# testing
-/coverage
-
-#models
-/public/modelers/*
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env
+# Dependency directories
+jspm_packages/
+bower_components/
 
-# vercel
-.vercel
+# Optional npm cache directory
+.npm/
 
-# typescript
+# TypeScript
 *.tsbuildinfo
-next-env.d.ts
+
+# Local environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Mac system files
+.DS_Store
+
+# Windows system files
+Thumbs.db
+ehthumbs.db
+
+# Other files to ignore
+package-lock.json
+yarn.lock
